--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<section id="hero">
 			<div class="hero-block">
 				<img class="img-circle" src="assets/img/logo.jpg" width="200" height="200" class="mb-7 hero-image">
-				<p>Hello, I'm Maxime and I'm a Consultant, Business Analyst at ­­<a href="http://avanade.com">Avanade</a><br/>
+				<p>Hello, I'm Maxime and I'm a senior consultant <a href="http://cgi.com">CGI</a><br/>
 
 			</div>
 		<a href="index.html#networks" class="scroll"><span class="down-arrow"></span></a>
@@ -46,7 +46,7 @@
 	<section id="networks">
 		<div class="container">
 			<p>
-                <a href="https://ca.linkedin.com/in/maximeperron"><i class="facebook fa fa-linkedin"></i></a><a href="mailto:perron.maxime@gmail.com"><i class="mail fa fa-envelope"></i></a><a href="Maxime_Perron_pub.asc"><i class="fa fa-lock"></i></a><a href="https://twitter.com/maximeperron"><i class="twitter fa fa-twitter"></i></a><a href="https://www.facebook.com/maxime.perron"><i class="facebook fa fa-facebook"></i></a><a href="https://instagram.com/maximeperron/"><i class="facebook fa fa-instagram"></i></a>
+                <a href="https://ca.linkedin.com/in/maximeperron"><i class="facebook fa fa-linkedin"></i></a><a href="mailto:perron.maxime@gmail.com"><i class="mail fa fa-envelope"></i></a><a href="https://twitter.com/maximeperron"><i class="twitter fa fa-twitter"></i></a><a href="https://www.facebook.com/maxime.perron"><i class="facebook fa fa-facebook"></i></a><a href="https://instagram.com/maximeperron/"><i class="facebook fa fa-instagram"></i></a>
 			</p>
 
 		</div>
