--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<section id="hero">
 			<div class="hero-block">
 				<img class="img-circle" src="assets/img/logo.jpg" width="200" height="200" class="mb-7 hero-image">
-				<p>Hello, I'm Maxime and I'm a Manager, Power Platform Atchitect at <a href="http://avanade.com">Avanade</a><br/>
+				<p>Hello, I'm Maxime and I'm a Manager, Power Platform Architect at <a href="http://avanade.com">Avanade</a><br/>
 
 			</div>
 		<a href="index.html#networks" class="scroll"><span class="down-arrow"></span></a>
