Update index.html for job change

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
-    <title>Maxime Perron - Power Platform Architect</title>
+    <title>Maxime Perron - Solution Architect</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +34,7 @@
 	<section id="hero">
 			<div class="hero-block">
 				<img class="img-circle" src="assets/img/logo.jpg" width="200" height="200" class="mb-7 hero-image">
-				<p>Hello, I'm Maxime and I'm a Group Manager, Power Platform Architect at <a href="http://avanade.com">Avanade</a><br/>
+				<p>Hello, I'm Maxime and I'm a Solution & Platform Architect at the <a href="https://www.cdpq.com/">CDPQ</a><br/>
 
 			</div>
 		<a href="index.html#networks" class="scroll"><span class="down-arrow"></span></a>
